--- a/Main/Views/TambahKasusPages/KorbanPage.xaml
+++ b/Main/Views/TambahKasusPages/KorbanPage.xaml
@@ -19,7 +19,7 @@
         <main:EnumToBoolConverter x:Key="EBConverter"/>
     </Page.Resources>
     <StackPanel>
-        <GroupBox >
+        <GroupBox Margin="20" >
             <GroupBox.HeaderTemplate>
                 <DataTemplate>
                     <Grid Margin="3">
@@ -29,7 +29,7 @@
                         </Grid.ColumnDefinitions>
                         <Label Width="auto" Content="Korban" HorizontalAlignment="Left" Foreground="White"/>
                         <WrapPanel HorizontalAlignment="Right" Grid.Column="1">
-                            <Button  Style="{StaticResource MaterialDesignFloatingActionAccentButton}" Width="25" Height="25">
+                            <Button Click="addkorban"  Style="{StaticResource MaterialDesignFloatingActionAccentButton}" Width="25" Height="25">
                                 <materialDesign:PackIcon
                                 Kind="Add"
                                 Height="24"
@@ -39,19 +39,35 @@
                     </Grid>
                 </DataTemplate>
             </GroupBox.HeaderTemplate>
-            <DataGrid>
+            <DataGrid ItemsSource="{Binding Korbans}" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" AutoGenerateColumns="False">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="No"/>
-                    <DataGridTextColumn Header="Nama"/>
-                    <DataGridTextColumn Header="JK"/>
-                    <DataGridTextColumn Header="Agama"/>
-                    <DataGridTextColumn Header="Pendidikan"/>
-                    <DataGridTextColumn Header="Suku"/>
-                    <DataGridTextColumn Header="Alamat" Width="*"/>
+                    <DataGridTextColumn Header="Nama" Binding="{Binding Nama}"/>
+                    <DataGridTextColumn Width="50" Header="JK" Binding="{Binding Gender}"/>
+                    <DataGridTextColumn Width="100" Header="Agama" Binding="{Binding Agama}"/>
+                    <DataGridTextColumn Width="150" Header="Pendidikan" Binding="{Binding Pendidikan}"/>
+                    <DataGridTextColumn Width="100" Header="Suku" Binding="{Binding Suku}"/>
+                    <DataGridTextColumn Width="100" Header="Hubungan" Binding="{Binding HubunganDenganTerlapor}"/>
+                    <DataGridTextColumn Header="Alamat" Width="*" Binding="{Binding Alamat}"/>
+                    <DataGridTemplateColumn Header="Action" Width="100" >
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <materialDesign:PopupBox   StaysOpen="True" IsEnabled="True">
+                                    <StackPanel>
+                                        <Button Margin="2" Content="Edit" Command="{Binding Path=DataContext.AddKorbanCommand, 
+                                             RelativeSource={RelativeSource Mode=FindAncestor, 
+                                              AncestorType={x:Type Page}}}" CommandParameter="{Binding .}"/>
+                                        <Button Margin="2" Content="Delte" Command="{Binding Path=DataContext.DeleteCommand, 
+                                             RelativeSource={RelativeSource Mode=FindAncestor, 
+                                              AncestorType={x:Type Page}}}" CommandParameter="{Binding .}"/>
+                                    </StackPanel>
+                                </materialDesign:PopupBox>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
         </GroupBox>
-        <GroupBox Header="Pelaku">
+        <GroupBox Header="Pelaku" Margin="20">
             <GroupBox.HeaderTemplate>
                 <DataTemplate>
                     <Grid Margin="3">
@@ -61,7 +77,7 @@
                         </Grid.ColumnDefinitions>
                         <Label Width="auto" Content="Pelaku" HorizontalAlignment="Left" Foreground="White"/>
                         <WrapPanel Grid.Column="1" HorizontalAlignment="Right">
-                            <Button  Style="{StaticResource MaterialDesignFloatingActionAccentButton}" Width="30" Height="30" >
+                            <Button Click="addpelaku_Click"  Style="{StaticResource MaterialDesignFloatingActionAccentButton}" Width="30" Height="30" >
                                 <materialDesign:PackIcon
                                 Kind="Add"
                                 Height="24"
@@ -71,15 +87,32 @@
                     </Grid>
                 </DataTemplate>
             </GroupBox.HeaderTemplate>
-            <DataGrid>
+            <DataGrid ItemsSource="{Binding Terlapors}" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True">
                 <DataGrid.Columns>
-                    <DataGridTextColumn Header="No"/>
-                    <DataGridTextColumn Header="Nama"/>
-                    <DataGridTextColumn Header="JK"/>
-                    <DataGridTextColumn Header="Agama"/>
-                    <DataGridTextColumn Header="Pendidikan"/>
-                    <DataGridTextColumn Header="Suku"/>
-                    <DataGridTextColumn Header="Alamat" Width="*"/>
+                    <DataGridTextColumn Header="Nama" Binding="{Binding Nama}"/>
+                    <DataGridTextColumn Width="50" Header="JK" Binding="{Binding Gender}"/>
+                    <DataGridTextColumn Width="100" Header="Agama" Binding="{Binding Agama}"/>
+                    <DataGridTextColumn Width="150" Header="Pendidikan" Binding="{Binding Pendidikan}"/>
+                    <DataGridTextColumn Width="100" Header="Suku" Binding="{Binding Suku}"/>
+                    <DataGridTextColumn Width="100" Header="Suku" Binding="{Binding HubunganDenganTerlapor}"/>
+                    <DataGridTextColumn Header="Alamat" Width="*" Binding="{Binding Alamat}"/>
+                    <DataGridTemplateColumn Header="Action" Width="100" >
+                        <DataGridTemplateColumn.CellTemplate>
+                            <DataTemplate>
+                                <materialDesign:PopupBox   StaysOpen="True" IsEnabled="True">
+                                    <StackPanel>
+                                        <Button Margin="2" Content="Edit" Command="{Binding Path=DataContext.AddTerlaporCommand, 
+                                             RelativeSource={RelativeSource Mode=FindAncestor, 
+                                              AncestorType={x:Type Page}}}" CommandParameter="{Binding .}"/>
+                                        <Button Margin="2" Content="Delte" Command="{Binding Path=DataContext.DeleteCommand, 
+                                             RelativeSource={RelativeSource Mode=FindAncestor, 
+                                              AncestorType={x:Type Page}}}" CommandParameter="{Binding .}"/>
+                                        <Button Margin="2" Content="Test"/>
+                                    </StackPanel>
+                                </materialDesign:PopupBox>
+                            </DataTemplate>
+                        </DataGridTemplateColumn.CellTemplate>
+                    </DataGridTemplateColumn>
                 </DataGrid.Columns>
             </DataGrid>
         </GroupBox>
